--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@scola/auth-client": "^4.0.1",
     "@scola/d3": "^4.1.0",
     "@scola/validator": "^6.0.1",
+    "dom-shims": "^0.1.4",
     "es6-shim": "^0.35.3",
     "es7-shim": "^6.0.0",
     "fastclick": "^1.0.6",
