Remove viewport polyfill

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "dom-shims": "^0.1.4",
     "es6-shim": "^0.35.3",
     "es7-shim": "^6.0.0",
-    "fastclick": "^1.0.6",
-    "viewport-units-buggyfill": "^0.6.1"
+    "fastclick": "^1.0.6"
   }
 }
